// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when comments are closed sitewide 1`] = `
<withPropsOnChange(CallOut)
  className="PostCommentFormCollapsed-root PostCommentFormCollapsed-sitewide"
  fullWidth={true}
>
  closed site-wide
</withPropsOnChange(CallOut)>
`;

exports[`renders correctly when story is closed 1`] = `
<withPropsOnChange(CallOut)
  className="PostCommentFormCollapsed-root"
  fullWidth={true}
>
  closed story
</withPropsOnChange(CallOut)>
`;
